# rusty-falcon

./: .gitignore  .rustfmt.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOCS.md  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: checks.yaml  ci.yaml  clippy.yaml  docs.yml  release.yml  tests.yaml
docs/: AlertsApi.md  ApiPeriodActionRespV1.md  ApiPeriodActionV1.md  ApiPeriodAggregatesResponse.md  ApiPeriodAuditEventDetailsResourceV1.md  ApiPeriodAuditEventDetailsResponseV1.md  ApiPeriodBulkUpdateReqV1.md  ApiPeriodCredPayload.md  ApiPeriodCustomerSettingsPatchRequestV1.md  ApiPeriodCustomerSettingsResourceV1.md  ApiPeriodCustomerSettingsResponseV1.md  ApiPeriodExposedDataFileDetailsV1.md  ApiPeriodExposedDataRecordFinancialV1.md  ApiPeriodExposedDataRecordLocationV1.md  ApiPeriodExposedDataRecordSocialV1.md  ApiPeriodImageLookupRequest.md  ApiPeriodIndicatorCreateReqV1.md  ApiPeriodIndicatorCreateReqsV1.md  ApiPeriodIndicatorQueryRespV1.md  ApiPeriodIndicatorRespV1.md  ApiPeriodIndicatorUpdateReqV1.md  ApiPeriodIndicatorUpdateReqsV1.md  ApiPeriodIndicatorV1.md  ApiPeriodIndicatorsQueryMeta.md  ApiPeriodIndicatorsQueryPaging.md  ApiPeriodIndicatorsReportRequest.md  ApiPeriodIndicatorsSortedSearch.md  ApiPeriodMessageCenterActivityResponse.md  ApiPeriodMessageCenterAttachmentUploadResponse.md  ApiPeriodMessageCenterCasesResponse.md  ApiPeriodMetadataReqV1.md  ApiPeriodMetadataV1.md  ApiPeriodNotificationExposedDataRecordEntitiesResponseV1.md  ApiPeriodNotificationExposedDataRecordV1.md  ApiPeriodPatternV1.md  ApiPeriodPatternsResponse.md  ApiPeriodPlatformsResponse.md  ApiPeriodPostEnrollmentDetails.md  ApiPeriodPostEnrollmentDetailsResponse.md  ApiPeriodRuleCreateV1.md  (+896 more)
docs/src/: README.md  SUMMARY.md  index.md  reference.md
examples/: README.md  falcon_custom_ioas.rs  falcon_discover_hosts.rs  falcon_get_cid.rs  falcon_host_details.rs  falcon_spotlight_vulnerabilities.rs  falcon_supported_kernels.rs  falcon_zta.rs  intel_indicators.rs  simple.rs
scripts/: run-examples.sh
src/: error.rs  lib.rs  serde_helpers.rs
src/apis/: activity_monitor_api.rs  alerts_api.rs  api_integrations_api.rs  aspm_api.rs  cao_hunting_api.rs  case_files_api.rs  case_management_api.rs  cases_api.rs  certificate_based_exclusions_api.rs  cloud_aws_registration_api.rs  cloud_azure_registration_api.rs  cloud_connect_aws_api.rs  cloud_oci_registration_api.rs  cloud_policies_api.rs  cloud_security_assets_api.rs  cloud_security_compliance_api.rs  cloud_security_detections_api.rs  cloud_snapshots_api.rs  compliance_assessments_api.rs  configuration.rs  configuration_assessment_api.rs  configuration_assessment_evaluation_logic_api.rs  container_alerts_api.rs  container_detections_api.rs  container_image_compliance_api.rs  container_images_api.rs  container_packages_api.rs  container_vulnerabilities_api.rs  content_update_policies_api.rs  correlation_rules_admin_api.rs  correlation_rules_api.rs  cspg_iacapi_api.rs  cspm_registration_api.rs  custom_ioa_api.rs  custom_storage_api.rs  d4c_registration_api.rs  datascanner_api.rs  default_api.rs  delivery_settings_api.rs  deployments_api.rs  (+102 more)
src/easy/: client.rs  cloud.rs  errors.rs  mod.rs
src/models/: _activity.rs  _costs.rs  _day.rs  _destination.rs  _digest_flow.rs  _flows.rs  _help.rs  _hour.rs  _non_compliant_by_severity.rs  _one_minute.rs  _query_spent.rs  _quota_total_spent.rs  _resource.rs  _resource_counts.rs  _resources.rs  _source_endpoint.rs  _source_user.rs  _ten_minutes.rs  account_integration_289680abbdb24ecc9e55e90a4c2f1770.rs  account_integration_78516f4af64a473daf4f3cf9a9c08930.rs  account_integration_get_integrations.rs  actions_action.rs  actions_action_response.rs  actions_create_action_request.rs  actions_get_action_response.rs  actions_period_action.rs  actions_period_action_response.rs  actions_period_create_action_request.rs  actions_period_get_action_response.rs  activities_activity_ext_field.rs  activities_activity_external_response.rs  activities_dependency.rs  activities_external_activity.rs  activities_period_activity.rs  activities_period_activity_ext_field.rs  activities_period_activity_external_response.rs  (+4636 more)
tests/: host_apis_tests.rs  host_group_api_test.rs
(+1834 files in other folders)
