[package]
name = "rusty_falcon"
version = "0.4.0"
authors = ["CrowdStrike Inc"]
description = "Rust bindings for CrowdStrike Falcon API"
homepage = "https://github.com/CrowdStrike/rusty-falcon"
repository = "https://github.com/CrowdStrike/rusty-falcon"
readme = "README.md"
edition = "2021"
rust-version = "1.82.0"
license-file = "LICENSE"
keywords = ["api", "crowdstrike", "falcon", "security", "vulnerability"]
categories = ["api-bindings", "asynchronous", "web-programming"]

[package.metadata.typos]
default = { extend-ignore-identifiers-re = [
    # ignore hexa data samples
    "[0-9a-fA-F][0-9a-fA-F]",
    "ot_",
    "_tto",
] }
files = { extend-exclude = [] }

[features]
default = ["openssl"]
openssl = ["dep:openssl", "dep:openssl-sys", "reqwest/default-tls"]
rustls = ["reqwest/rustls-tls"]

[dependencies]
# To satisfy minimal version check
openssl = { version = "0.10.73", optional = true }
# To satisfy minimal version check
openssl-sys = { version = "0.9.109", optional = true }
reqwest = { version = "0.13.1", features = [
    "charset",
    "json",
    "multipart",
], default-features = false }
serde = "1.0.210"
serde_derive = "1.0.210"
serde_json = "1.0.128"
serde_with = "3.14.0"
thiserror = "2.0.3"
url = "2.5.2"

[dev-dependencies]
clap = { version = "4.5.19", features = ["derive"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "z"
