[package]
name = "rusty_falcon"
version = "0.7.0"
authors = ["CrowdStrike Inc"]
description = "Rust bindings for CrowdStrike Falcon API"
homepage = "https://github.com/CrowdStrike/rusty-falcon"
repository = "https://github.com/CrowdStrike/rusty-falcon"
readme = "README.md"
edition = "2024"
rust-version = "1.85.0"
license-file = "LICENSE"
keywords = ["api", "crowdstrike", "falcon", "security", "vulnerability"]
categories = ["api-bindings", "asynchronous", "web-programming"]

[package.metadata.typos]
default = { extend-ignore-identifiers-re = [
    # ignore hexa data samples
    "[0-9a-fA-F][0-9a-fA-F]",
    "ot_",
    "_tto",
] }
files = { extend-exclude = [] }

[features]
default = []
native-tls = ["reqwest/native-tls"]

[dependencies]
reqwest = { version = "0.13.1", features = [
    "charset",
    "form",
    "json",
    "multipart",
    "query",
    "rustls",
], default-features = false }
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.149"
serde_with = "3.16.1"
thiserror = "2.0.18"
url = "2.5.8"

[dev-dependencies]
clap = { version = "4.5.54", features = ["derive"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "z"
